force-app/main/default/objects/Country__c/fields/China__c.field-meta.xml
<CustomField>
    <fullName>China__c</fullName>
    <label>China</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industrial and Commercial Bank of China</fullName>
            </value>
            <value>
                <fullName>Agriculture Bank of China</fullName>
            </value>
            <value>
                <fullName>Bank of China</fullName>
            </value>
            <value>
                <fullName>China Construction Bank</fullName>
            </value>
            <value>
                <fullName>China Development Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Communications</fullName>
            </value>
            <value>
                <fullName>China Citic Bank</fullName>
            </value>
            <value>
                <fullName>Huaxia Bank</fullName>
            </value>
            <value>
                <fullName>China Minsheng Banking Cop.Ltd</fullName>
            </value>
            <value>
                <fullName>China Guangfa Banking Co.Ltd</fullName>
            </value>
            <value>
                <fullName>China Merchant Bank</fullName>
            </value>
            <value>
                <fullName>Industrial Bank Co., Ltd</fullName>
            </value>
            <value>
                <fullName>Shanghai Pudong Development Bank Co., Ltd</fullName>
            </value>
            <value>
                <fullName>Baoshang Bank</fullName>
            </value>
            <value>
                <fullName>Harbin Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Shanghai</fullName>
            </value>
            <value>
                <fullName>Guangxi Beibu Gulf Bank Co., Ltd</fullName>
            </value>
            <value>
                <fullName>Fudian Bank Co., Ltd</fullName>
            </value>
            <value>
                <fullName>Bank of Kunlun Co., Ltd</fullName>
            </value>
            <value>
                <fullName>Yinzhou Bank</fullName>
            </value>
            <value>
                <fullName>HSBC Bank (China) Company Limited</fullName>
            </value>
            <value>
                <fullName>The Bank of East Asia (China) Limited</fullName>
            </value>
            <value>
                <fullName>Hang Seng Bank (China) Limited</fullName>
            </value>
            <value>
                <fullName>Chong Hing Bank Shantou Branch</fullName>
            </value>
            <value>
                <fullName>Wing Hang Bank (China) Co., Ltd</fullName>
            </value>
            <value>
                <fullName>Wing Lung Bank Shenzhen Branch</fullName>
            </value>
            <value>
                <fullName>Citibank (China) Co., Ltd. Shanghai Branch</fullName>
            </value>
            <value>
                <fullName>Bank of America Shanghai Branch</fullName>
            </value>
            <value>
                <fullName>JP Morgan Chase Bank (China) Company Limited</fullName>
            </value>
            <value>
                <fullName>Bank of Tokyo-Mitsubishi UFJ (China) Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>