force-app/main/default/objects/Country__c/fields/India__c.field-meta.xml
<CustomField>
    <fullName>India__c</fullName>
    <label>India</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Axis Bank</fullName>
            </value>
            <value>
                <fullName>Bandhan Bank</fullName>
            </value>
            <value>
                <fullName>HDFC Bank</fullName>
            </value>
            <value>
                <fullName>ICICI Bank</fullName>
            </value>
            <value>
                <fullName>IndusInd Bank</fullName>
            </value>
            <value>
                <fullName>IDFC FIRST Bank</fullName>
            </value>
            <value>
                <fullName>Jammu &amp; Kashmir Bank</fullName>
            </value>
            <value>
                <fullName>Karnataka Bank</fullName>
            </value>
            <value>
                <fullName>Karur Vysya Bank</fullName>
            </value>
            <value>
                <fullName>Kotak Mahindra Bank</fullName>
            </value>
            <value>
                <fullName>Nainital Bank</fullName>
            </value>
            <value>
                <fullName>South Indian Bank</fullName>
            </value>
            <value>
                <fullName>Tamilnad Mercantile Bank</fullName>
            </value>
            <value>
                <fullName>YES Bank</fullName>
            </value>
            <value>
                <fullName>IDBI Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>