force-app/main/default/objects/Country__c/fields/Japan__c.field-meta.xml
<CustomField>
    <fullName>Japan__c</fullName>
    <label>Japan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>114Bank</fullName>
            </value>
            <value>
                <fullName>ANZ Japan</fullName>
            </value>
            <value>
                <fullName>Asahi Bank</fullName>
            </value>
            <value>
                <fullName>Ashikaga Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Kansai</fullName>
            </value>
            <value>
                <fullName>Bank of Nagoya</fullName>
            </value>
            <value>
                <fullName>Bank of Okinawa</fullName>
            </value>
            <value>
                <fullName>Bank of the Ryukyus</fullName>
            </value>
            <value>
                <fullName>Bank of Tokyo-Mitsubishi</fullName>
            </value>
            <value>
                <fullName>Bank of Yokohama</fullName>
            </value>
            <value>
                <fullName>Chiba Bank</fullName>
            </value>
            <value>
                <fullName>Citibank Japan</fullName>
            </value>
            <value>
                <fullName>Daiwa Bank</fullName>
            </value>
            <value>
                <fullName>Fukui Bank</fullName>
            </value>
            <value>
                <fullName>Fukuoka City Bank</fullName>
            </value>
            <value>
                <fullName>Hachijuni Bank</fullName>
            </value>
            <value>
                <fullName>Hokkoku Bank</fullName>
            </value>
            <value>
                <fullName>Hokuetsu Bank</fullName>
            </value>
            <value>
                <fullName>Hokuriku Bank</fullName>
            </value>
            <value>
                <fullName>Hyakugo Bank</fullName>
            </value>
            <value>
                <fullName>Iyo Bank</fullName>
            </value>
            <value>
                <fullName>Joyo Bank</fullName>
            </value>
            <value>
                <fullName>Kagawa Bank</fullName>
            </value>
            <value>
                <fullName>Kanto Bank</fullName>
            </value>
            <value>
                <fullName>Keiyo Bank</fullName>
            </value>
            <value>
                <fullName>Mie Bank</fullName>
            </value>
            <value>
                <fullName>Miyazaki Bank</fullName>
            </value>
            <value>
                <fullName>Mizuho Bank</fullName>
            </value>
            <value>
                <fullName>Ogaki Kyoritsu Bank</fullName>
            </value>
            <value>
                <fullName>OitaBank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>