force-app/main/default/objects/Country__c/fields/Russia__c.field-meta.xml
<CustomField>
    <fullName>Russia__c</fullName>
    <label>Russia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AK BARS Bank</fullName>
            </value>
            <value>
                <fullName>Alfa Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Khanty-Mansiysk</fullName>
            </value>
            <value>
                <fullName>Bank of Moscow</fullName>
            </value>
            <value>
                <fullName>Bank Petrocommerc</fullName>
            </value>
            <value>
                <fullName>Bank Rossiya</fullName>
            </value>
            <value>
                <fullName>Bank Saint Petersburg</fullName>
            </value>
            <value>
                <fullName>Bank ZENIT</fullName>
            </value>
            <value>
                <fullName>Citibank (Russia)</fullName>
            </value>
            <value>
                <fullName>Credit Bank of Moscow</fullName>
            </value>
            <value>
                <fullName>Gazprombank</fullName>
            </value>
            <value>
                <fullName>Globex Bank</fullName>
            </value>
            <value>
                <fullName>ING Bank (Eurasia)</fullName>
            </value>
            <value>
                <fullName>MDM Bank</fullName>
            </value>
            <value>
                <fullName>National Bank TRUST</fullName>
            </value>
            <value>
                <fullName>Nomos Bank</fullName>
            </value>
            <value>
                <fullName>Nordea Bank (Russia)</fullName>
            </value>
            <value>
                <fullName>Promsvyazbank</fullName>
            </value>
            <value>
                <fullName>Raiffeisen Bank (Russia)</fullName>
            </value>
            <value>
                <fullName>Rosbank</fullName>
            </value>
            <value>
                <fullName>Russian Agricultural Bank</fullName>
            </value>
            <value>
                <fullName>Russian Standard Bank</fullName>
            </value>
            <value>
                <fullName>Sberbank</fullName>
            </value>
            <value>
                <fullName>Sviaz-Bank</fullName>
            </value>
            <value>
                <fullName>TransCreditBank</fullName>
            </value>
            <value>
                <fullName>UniCredit Bank (Russia)</fullName>
            </value>
            <value>
                <fullName>Uralsib</fullName>
            </value>
            <value>
                <fullName>Vozrozhdenie Bank</fullName>
            </value>
            <value>
                <fullName>VTB</fullName>
            </value>
            <value>
                <fullName>VTB24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>