force-app/main/default/objects/Country__c/fields/UK__c.field-meta.xml
<CustomField>
    <fullName>UK__c</fullName>
    <label>UK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abbey National plc</fullName>
            </value>
            <value>
                <fullName>Abbey National Treasury Services plc</fullName>
            </value>
            <value>
                <fullName>ABC International Bank plc</fullName>
            </value>
            <value>
                <fullName>Access Bank UK Limited</fullName>
            </value>
            <value>
                <fullName>Ahli United Bank (UK) plc</fullName>
            </value>
            <value>
                <fullName>Airdrie Savings Bank</fullName>
            </value>
            <value>
                <fullName>Allied Bank</fullName>
            </value>
            <value>
                <fullName>Alpha Bank</fullName>
            </value>
            <value>
                <fullName>AMC Bank Ltd</fullName>
            </value>
            <value>
                <fullName>Anglo-Romanian Bank Ltd</fullName>
            </value>
            <value>
                <fullName>ANZ Bank (Europe) Ltd</fullName>
            </value>
            <value>
                <fullName>Banc of America Securities Ltd</fullName>
            </value>
            <value>
                <fullName>Bank Leumi (UK) plc</fullName>
            </value>
            <value>
                <fullName>Bank Mandiri (Europe) Ltd</fullName>
            </value>
            <value>
                <fullName>Bank of Beirut (UK) Ltd</fullName>
            </value>
            <value>
                <fullName>Bank of China (UK) Limited</fullName>
            </value>
            <value>
                <fullName>Bank of London and The Middle East plc</fullName>
            </value>
            <value>
                <fullName>Bank of New York Mellon (International) Limited</fullName>
            </value>
            <value>
                <fullName>Bank of Philippine Islands (Europe), PLC</fullName>
            </value>
            <value>
                <fullName>Bank of Scotland plc</fullName>
            </value>
            <value>
                <fullName>Bank Saderat plc</fullName>
            </value>
            <value>
                <fullName>Bank Sepah International plc</fullName>
            </value>
            <value>
                <fullName>Barclays Bank plc</fullName>
            </value>
            <value>
                <fullName>Bradford &amp; Bingley plc</fullName>
            </value>
            <value>
                <fullName>British Arab Commercial Bank Ltd</fullName>
            </value>
            <value>
                <fullName>Broadcastle Bank ltd</fullName>
            </value>
            <value>
                <fullName>Brown Shipley &amp; Co. Ltd</fullName>
            </value>
            <value>
                <fullName>Butterfield Bank (UK) Ltd</fullName>
            </value>
            <value>
                <fullName>CAF Bank Ltd</fullName>
            </value>
            <value>
                <fullName>Capital One Bank (Europe) plc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>