force-app/main/default/objects/Country__c/fields/USA__c.field-meta.xml
<CustomField>
    <fullName>USA__c</fullName>
    <label>USA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JP Morgan Chase Bank</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Citigroup</fullName>
            </value>
            <value>
                <fullName>Goldman Sachs</fullName>
            </value>
            <value>
                <fullName>Morgan Stanely</fullName>
            </value>
            <value>
                <fullName>U.S. Bankcorp</fullName>
            </value>
            <value>
                <fullName>PNC Financial Services</fullName>
            </value>
            <value>
                <fullName>TD Bank</fullName>
            </value>
            <value>
                <fullName>Capital One Bank</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>Bank of the West</fullName>
            </value>
            <value>
                <fullName>State Street Corporation</fullName>
            </value>
            <value>
                <fullName>Sun Trust Bank</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Ally Financial</fullName>
            </value>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>USAA</fullName>
            </value>
            <value>
                <fullName>Citizen Financial Group</fullName>
            </value>
            <value>
                <fullName>Fifth Third Bank.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>